--- a/packages/bruno-app/src/styles/globals.css
+++ b/packages/bruno-app/src/styles/globals.css
@@ -66,7 +66,3 @@ body::-webkit-scrollbar-thumb,
  * transform: scale(1.1);
  * }
  */
-
-.monaco-editor .lines-content {
-  padding-left: 5px;
-}
